Java 11 (#1)
* java 11 successful build

* fix CTS cast exception

* add java 11 to build workflow